--- a/server/mail/mail_template/verification.html
+++ b/server/mail/mail_template/verification.html
@@ -51,7 +51,7 @@
 <script>
     document.getElementById('verification_form').addEventListener('submit', submitForm);
     output = document.getElementById("output")
-    submitButton = document.getElementById("submit"
+    submitButton = document.getElementById("submit")
 
     function submitForm(event) {
         // Cancel standard browser behaviour with send form
