--- a/mail/mail_template/verification_page.html
+++ b/mail/mail_template/verification_page.html
@@ -72,7 +72,7 @@
         xhr.onload = function() {
             if (xhr.status === 200) {
                 output.style.color = "green";
-                output.innerText = "Thank you! Verification have done successfully.";
+                output.innerText = "Thank you! Verification has done successfully.";
                 submitButton.setAttribute("disabled", "disabled");
             } else if (xhr.status === 400){
                 if (xhr.responseText.trim() === "Bad request{\"error\":\"verification code expired\"}") {
